Cleanup dependencies, cleanup imports, add DataLoader